fixed spacing issue and background color issue

--- a/style.css
+++ b/style.css
@@ -30,12 +30,6 @@ p {
     font-family: calibri;
     font-size: 110%; 
   }
-p1 { 
-    text-align: center;
-	background-color: #efc10b;
-    font-family: calibri;
-    font-size: 110%;
-  }
 .button { 
     font-size: 16px;
     text-align: center;
@@ -92,7 +86,7 @@ p1 {
     width: 250px;
     background-color: #D2691E;
     color: white;
-    vertical-align: middle;
+    float: center;
 }
 section {
     background-color: bisque;
